// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterfaceHeader snapshot micro 1`] = `
<header
  class="text-xs text-dark-aa font-medium antialiased"
>
  Ideal next opportunity
</header>
`;

exports[`InterfaceHeader snapshot page 1`] = `
<header
  class="text-xl text-slate-800 font-medium antialiased"
>
  General Settings
</header>
`;

exports[`InterfaceHeader snapshot panel 1`] = `
<header
  class="text-lg text-dark-aaa font-medium antialiased"
>
  Unbiased Sourcing
</header>
`;

exports[`InterfaceHeader snapshot section 1`] = `
<header
  class="text-md text-dark-aaa font-medium antialiased"
>
  Diversity
</header>
`;
